# CSL

./: .gitignore  CMakeLists.txt  README.md  build_doc.bat  clean-build.bat  recreate_cmake.bat  recreate_msvc.bat
CMake/: tools.cmake
External_dep/: CMakeLists.txt
LabView/DataTypes/: DataTypes.llb
LabView/DisplayManager/: DisplayManager.llb  DisplayManager.vi  Readme.txt
LabView/RadiogramProcessing/: RadiogramProcessing.vi
LabView/Tests/: BW_Sample-04-60kV-12mA-8s-IQI.tif  DisplayManager_test.vi  OR_Sample-04-60kV-12mA-8s-IQI.tif  WE_Sample-04-60kV-12mA-8s-IQI.tif  buildColorArray_test.vi  clearArray_test.vi  fillROI_test.vi  grayToColor_test.vi  scaleImage_test.vi
Python/: CreateModuleFiles.py  Readme
configs/: Doxyfile  Doxyfile_linux  FastMEdian_tests.playlist
include/: DOC.h  definitions.h
include/ComTest1/: ComTest1_DLL_Wrapper.h
include/LV_ErrorDecode/: LV_ErrorDecode.h
include/LV_FastMedian/: LV_FastMedian_DLL_Wrapper.h  LV_fastMedian.h  errordef.h
include/LV_Features/: LV_Features.h  LV_Features_DLL_Wrapper.h  PCA.h  errordef.h
include/LV_Threshold/: LV_Threshold.h  LV_Threshold_DLL_Wrapper.h  errordef.h
include/LV_WeldDetectApprox/: CV_WeldPostProcess.h  C_CircBuff.h  C_Levmar_Warp.h  C_LineInterp.h  C_LineWeldApprox.h  C_LinearWeld.h  C_Matrix_Container.h  C_WeldPos.h  C_WeldlineDetect.h  LV_WeldDetectApprox_DLL_Wrapper.h  M_WeldDetectApprox_DLL_Wrapper.h  ParamEstimation.h  errordef.h
include/setError/: setError.h
src/: CMakeLists.txt
src/ComTest1/: CMakeLists.txt  ComTest1_DLL_Wrapper.cpp  dllmain.cpp
src/Error/: CMakeLists.txt
src/LV_ErrorDecode/: CMakeLists.txt  LV_ErrorDecode.cpp  dllmain.cpp  dummydllmain.cpp  errordef.h  errordef.rc
src/LV_FastMedian/: CMakeLists.txt  LV_FastMedian.cpp  LV_FastMedian_DLL_Wrapper.cpp  dllmain.cpp  errordef.rc
src/LV_Features/: CMakeLists.txt  C_Error.cpp  C_Image_Container.cpp  C_Matrix_Container.cpp  LV_Features.cpp  LV_Features_DLL_Wrapper.cpp  PCA.cpp  dllmain.cpp  errordef.rc
src/LV_Threshold/: CMakeLists.txt  LV_Threshold.cpp  LV_Threshold_DLL_Wrapper.cpp  dllmain.cpp  errordef.rc  resources.rc.in
src/LV_WeldDetectApprox/: CMakeLists.txt  CV_WeldPostProcess.cpp  C_Levmar_Warp.cpp  C_LineInterp.cpp  C_LineWeldApprox.cpp  C_LinearWeld.cpp  C_Matrix_Container.cpp  C_WeldPos.cpp  C_WeldlineDetect.cpp  LV_WeldDetectApprox.cpp  LV_WeldDetectApprox_DLL_Wrapper.cpp  M_WeldDetectApprox_DLL_Wrapper.cpp  ParamEstimation.cpp  WeldDetecApprox_example.cpp  coeff.c  def.def  dllmain.cpp  errordef.rc  interpol.cpp
src/Proj_lot/: CMakeLists.txt  lv_mix.txt
src/Proj_lot/cvclient/cvclient/: background_sub.cpp  convolve.cpp  cvclient.vcxproj  cvclient.vcxproj.filters  cvclient1.rc  cvclient2.rc  erozja.cpp  example1.cpp  examples.cpp  examples.h  fourier_transform.cpp  jasnosc.cpp  kontury.cpp  main.cpp  mainold.cpp  morphology.cpp  resource.h  resource1.h  resource2.h  smooth.cpp  threshold.cpp  watershed.cpp  watershed1.cpp  watershed2.cpp
src/Proj_lot/cvlib/: cvlib.sln
src/Proj_lot/cvlib/cvlib/: ReadMe.txt  Resource.h  bledy.rc  cvlib-release32.props  cvlib.cpp  cvlib.h  cvlib.rc  cvlib.vcxproj  cvlib.vcxproj.filters  cvprocess.cpp  cvprocess.h  definitions.h  errordef.h  setError.cpp
src/Proj_lot/cvlib/cvlib/setError/: setError.h
src/cvclient/: CMakeLists.txt  cvclient.sln
src/cvclient/cvclient/: cvclient-release32.props  cvclient.vcxproj  cvclient.vcxproj.filters  main.cpp  main_kopia1.cpp  main_thresholding.cpp
src/cvlib/: CMakeLists.txt
src/cvlib/cvlib/: cvlib.cpp  cvlib.def  cvlib.h  cvlib.vcxproj  cvlib.vcxproj.filters  setError.cpp  stdafx.cpp
src/cvlib/cvlib/res/: cvlib.rc2
src/dll_rulproj/: CMakeLists.txt  dll_rulproj.sln
src/dll_rulproj/dll_rulproj/: ReadMe.txt  Resource.h  dll_rulproj.cpp  dll_rulproj.def  dll_rulproj.h  dll_rulproj.rc  dll_rulproj.vcxproj  dll_rulproj.vcxproj.filters  rulinter.cpp  rulinter.hpp  stdafx.cpp
src/dll_rulproj/dll_rulproj/cerror/: C_Error.cpp  C_Error.h
src/dll_rulproj/dll_rulproj/dane/: dane_all1.tab  nspawy_probki.tab
src/dll_rulproj/dll_rulproj/res/: dll_rulproj.rc2
src/setError/: CMakeLists.txt  setError.cpp  setError_example.cpp
static_resources/: Readme
tests/: CMakeLists.txt
tests/ErrorHandling/: CMakeLists.txt  ErrorDecoder.cpp  ErrorHandling_tests.cpp  dllmain.cpp  errordef.h
tests/LV_ErrorDecode/: CMakeLists.txt  GTest_starter.cpp  LV_ErrorDecode_tests.cpp
tests/LV_FastMedian/: CMakeLists.txt  GTest_starter.cpp  LV_FastMedian_DLL_tests.cpp  LV_FastMedian_static_tests.cpp  LV_FastMedian_tests.cpp  verify.m
tests/LV_Features/: CMakeLists.txt  GTest_starter.cpp  LV_Features_tests.cpp
tests/LV_Threshold/: CMakeLists.txt  LV_Threshold_tests.cpp  verify.m
tests/LV_WeldDetectApprox/: CMakeLists.txt  C_Matrix_Container.cpp  C_Matrix_Container.h  GTest_starter.cpp  LV_WeldDetectApprox_DLL_tests.cpp  LV_WeldDetectApprox_WeldPostProcess_tests.cpp  LV_WeldDetectApprox_tests.cpp  verify.m
tests/OpenCV_simple_test/: CMakeLists.txt  DisplayImage.cpp
tests/dlltest/: CMakeLists.txt  dlltest.sln
tests/dlltest/dlltest/: dlltest.vcxproj  main.cpp
tests/przyklad/: 02.tif  02_conv3.tif  02_conv5.tif  11.tif  11_conv3.tif  11_conv5.tif  CMakeLists.txt  medium.tif  small.tif
tests/setError/: CMakeLists.txt  setError_Tests.cpp
tools/: LogConvert.bat  config
tools/svn-win32-1.8.10/: README.txt
